# quatris

./: README.txt  aclocal.m4
gui/: AUTHORS  Makefile.am  Makefile.in  configure  configure.in  quatris.glade
gui/macros/: Makefile.in
gui/src/: computer.c  computer.h  interactions.c  main.c
po/: ChangeLog  POTFILES.in  it.gmo  it.po  quatris.pot
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  computer.c  interactions.h  interface.c  interface.h
